--- a/src/main/resources/templates/cinema_search.html
+++ b/src/main/resources/templates/cinema_search.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" th:href="@{/plugins/datatables/dataTables.bootstrap4.min.css}">
   <!-- Theme style -->
   <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
+  <script type='text/javascript' th:src='@{/dist/js/jquery-1.11.1.min.js}'></script>
+  <script type='text/javascript' th:src='@{/dist/js/city.js}'></script>
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -188,33 +190,32 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group">
-                    <label for="exampleInputEmail1">影院名称：</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：北京世纪东都国际影城">
+                    <div class="row">
+                      <div class="col-6 float-lg-left">
+                        <div class="form-group">
+                          <label>所在省市：</label>
+                          <select id="province" class="form-control">
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-6 float-lg-right">
+                        <div class="form-group">
+                          <label>所在区：</label>
+                          <select id="city" class="form-control">
+                          </select>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="form-group col-6 float-lg-left">
+                        <label>影院名称：</label>
+                        <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城">
+                      </div>
+                      <div class="form-group col-6 float-lg-right">
+                        <label>影院经理：</label>
+                        <input type="text" class="form-control" placeholder="例：张XX">
+                      </div>
                   </div>
-                  <div class="form-group">
-                    <label for="exampleInputPassword1">影院地址：</label>
-					<div class="form-group">
-						<label>省市：</label>
-						<select class="form-control">
-						  <option>北京市</option>
-						  <option>深圳市</option>
-						  <option>上海市</option>
-						  <option>广州市</option>
-						  <option>青岛市</option>
-						</select>
-						<label>区：</label>
-						<select class="form-control">
-						  <option>东城区</option>
-						  <option>西城区</option>
-						  <option>朝阳区</option>
-						  <option>昌平区</option>
-						  <option>通州区</option>
-						</select>
-					</div>
-				  </div>
-				  <div class="form-group">
-                    <label for="exampleInputPassword1">影院经理：</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：张XX">
                   </div>
 					<!-- /.card-body -->
 					<div class="card-footer">
@@ -708,6 +709,25 @@
       "autoWidth": false
     });
   });
+</script>
+<script>
+  (function(){
+    var pHtmlStr = '';
+    for(var name in pc){
+      pHtmlStr = pHtmlStr + '<option>'+name+'</option>';
+    }
+    $("#province").html(pHtmlStr);
+    $("#province").change(function(){
+      var pname = $("#province option:selected").text();
+      var pHtmlStr = '';
+      var cityList = pc[pname];
+      for(var index in cityList){
+        pHtmlStr = pHtmlStr + '<option>'+cityList[index]+'</option>';
+      }
+      $("#city").html(pHtmlStr);
+    });
+    $("#province").change();
+  })();
 </script>
 </body>
 </html>
