--- a/src/main/resources/templates/data_cinema.html
+++ b/src/main/resources/templates/data_cinema.html
@@ -189,20 +189,20 @@
               <form role="form">
                 <div class="card-body">
                   <div class="form-group">
-                    <label for="exampleInputEmail1">影院名称</label>
-                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="例：北京世纪东都国际影城">
+                    <label>影院名称</label>
+                    <input type="text" class="form-control" placeholder="例：北京世纪东都国际影城">
                   </div>
                   <div class="form-group">
-                    <label for="exampleInputPassword1">影院地址</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：北京市朝阳区西大望路100号">
+                    <label>影院地址</label>
+                    <input type="text" class="form-control" placeholder="例：北京市朝阳区西大望路100号">
                   </div>
 				  <div class="form-group">
-                    <label for="exampleInputPassword1">影院经理</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：张XX">
+                    <label>影院经理</label>
+                    <input type="text" class="form-control" placeholder="例：张XX">
                   </div>
 				  <div class="form-group">
-                    <label for="exampleInputPassword1">联系电话</label>
-                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="例：1500000000">
+                    <label>联系电话</label>
+                    <input type="text" class="form-control"placeholder="例：1500000000">
                   </div>                                  
                 <!-- /.card-body -->
                 <div class="card-footer">
@@ -224,7 +224,7 @@
                   <th>地址</th>
                   <th>影院经理</th>
                   <th>联系电话</th>
-				  <th>详情</th>
+				  <th><a href="/details">详情</a></th>
                 </tr>
                 </thead>
                 <tbody>
