--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/dist/css/style.css}" />
     <script type='text/javascript' th:src='@{/dist/js/jquery-1.11.1.min.js}'></script>
-    <script src="http://www.jsdelivr.com/#!particles.js"></script>
+<!--    <script src="http://www.jsdelivr.com/#!particles.js"></script>-->
 </head>
 <body>
 <!--
