--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
     <script type='text/javascript' th:src='@{/dist/js/jquery.particleground.js}'></script>
     <script type='text/javascript' th:src='@{/dist/js/demo-login.js}'></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link th:href="@{/dist/css/font-awesome.min.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/dist/css/style.css}" />
     <script>
         $(function () {
