--- a/src/main/resources/templates/model/left.html
+++ b/src/main/resources/templates/model/left.html
@@ -153,7 +153,7 @@
             </ul>
         </li>
         <li class="nav-item has-treeview">
-            <a href="#" class="nav-link">
+            <a class="nav-link">
                 <i class="nav-icon fa fa-search"></i>
                 <p>
                     资料库
@@ -162,19 +162,19 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="/data_search" class="nav-link">
+                    <a href="/documents/standard" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
                         <p>相关标准</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="/cinema_search" class="nav-link">
+                    <a href="/documents/operate_course" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
                         <p>维护教程</p>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/documents/handbook" class="nav-link">
                         <i class="fa fa-search nav-icon"></i>
                         <p>故障手册</p>
                     </a>
