--- a/src/main/resources/templates/task/calendar_manage.html
+++ b/src/main/resources/templates/task/calendar_manage.html
@@ -202,13 +202,130 @@
 
     /* initialize the external events
      -----------------------------------------------------------------*/
-    var storedEvents=null
-    $.get("http://localhost:8084",function (data,status) {
-              console.log(data+"---"+status)
-              storedEvents=data
+    var storedEvents= [];
+    $.get("http://localhost:8084/get_task",function (data,status) {
+              console.log(status)
+              if("success"==status){//如果从服务器成功获取数据
+                for(var p in data){
+                  //遍历JSON数据的每一项
+                  var title=data[p].title;//拿到title
+                  var allDay=false;//拿到allDay的布尔值
+
+                  var date=data[p].date;
+                  var arr=date.split(" ");
+
+                  var month=month_transform(arr[1]);//任务的月份
+                  var day=Number(arr[2]);//任务的天
+                  var year=Number(arr[3]);//任务的年
+
+                  var startTime=data[p].start;
+                  var arr1=startTime.split(":")
+                  var startHour=Number(arr1[0]);//任务的起始小时
+                  var startMinute=Number(arr1[1]);//任务的起始分钟
+
+                  var endTime=data[p].end;
+                  var arr2=endTime.split(":")
+
+                  var endHour=Number(arr2[0]);//任务的结束小时
+                  var endMinute=Number(arr2[0]);//任务的结束分钟
+
+                  var type=data[p].status;
+                  var backgroundColor="";
+                  var borderColor=""
+
+                  if(type==1){//黄色
+                    backgroundColor='#f39c12'
+                    borderColor='#f39c12'
+                  }else{//红色
+                    backgroundColor='#f56954'
+                    borderColor='#f56954'
+                  }
+
+                  var start=new Date(year,month,day,startHour,startMinute);
+                  //创建起始日期
+                  var end=new Date(year,month,day,endHour,endMinute);
+                  //创建结束日期
+
+                  var newTask={
+                    title          : title,
+                    start          : start,
+                    end            : end,
+                    allDay         : false,
+                    backgroundColor: backgroundColor,
+                    borderColor    : borderColor
+                  }//构建JSON数据
+                  storedEvents.push(newTask)//添加进入JSON数组中
+                }
+                //只有在成功拿到JSON数据之后才对日历进行渲染
+                $('#calendar').fullCalendar({
+                  header    : {
+                    left  : 'prev,next today',
+                    center: 'title',
+                    right : 'month,agendaWeek,agendaDay'
+                  },
+                  buttonText: {
+                    today: '今天',
+                    month: '月',
+                    week : '周',
+                    day  : '天'
+                  },
+
+                  events    : storedEvents,
+                  editable  : false,
+                  droppable : true,
+                  // this allows things to be dropped onto the calendar !!!
+                  drop      : function (date, allDay) {
+                    // this function is called when something is dropped
+
+                    // retrieve the dropped element's stored Event Object
+                    var originalEventObject = $(this).data('eventObject')
+                    console.log(originalEventObject)
+                    // we need to copy it, so that multiple events don't have a reference to the same object
+                    var copiedEventObject = $.extend({}, originalEventObject)
+                    console.log(copiedEventObject)
+
+
+                    // assign it the date that was reported
+                    copiedEventObject.start = date
+                    copiedEventObject.allDay          = false
+                    copiedEventObject.backgroundColor = $(this).css('background-color')
+                    copiedEventObject.borderColor     = $(this).css('border-color')
+                    var information=feedback(copiedEventObject.title,copiedEventObject.detail,copiedEventObject.equipment,copiedEventObject.staff,copiedEventObject.start_time)
+                    console.log(date._d)
+                    Dialog({
+                      title: "确认信息",
+                      content:information,
+                      ok:{
+                        callback: function () {
+                          $.post("http://localhost:8084/post_task",
+                                  {
+                                    title:copiedEventObject.title,
+                                    detail:copiedEventObject.detail,
+                                    start_time: copiedEventObject.start_time,
+                                    end_time: copiedEventObject.end_time,
+                                    date:date._d,
+                                    staff:copiedEventObject.staff,
+                                    equipment: copiedEventObject.equipment,
+                                    color:copiedEventObject.backgroundColor,
+                                  },
+                                  function(data,status) {
+                                    console.log(status)
+                                  },"json")
+                          $('#calendar').fullCalendar('renderEvent', copiedEventObject, true)
+                        }
+                      }
+
+                    });
+
+
+                  }
+                })
+              }else{
+                console.log("Error Connection to Internet")
+              }
+
             }
     )
-    console.log("RESPONSE:"+storedEvents)
 
     function ini_events(ele,information,person,startTime,endTime,equipment) {
       ele.each(function () {
@@ -229,151 +346,51 @@
         // make the event draggable using jQuery UI
         $(this).draggable({
           zIndex        : 1070,
-          revert        : true, // will cause the event to go back to its
+          revert        : false, // will cause the event to go back to its
           revertDuration: 0 , //  original position after the drag
         })
 
       })
     }
+
     ini_events($('#external-events div.external-event'))
-    /* initialize the calendar
-     -----------------------------------------------------------------*/
-    //Date for the calendar events (dummy data)
-
-    var date = new Date()
-    var d    = date.getDate(),
-            m    = date.getMonth(),
-            y    = date.getFullYear()
-    $('#calendar').fullCalendar({
-      header    : {
-        left  : 'prev,next today',
-        center: 'title',
-        right : 'month,agendaWeek,agendaDay'
-      },
-      buttonText: {
-        today: '今天',
-        month: '月',
-        week : '周',
-        day  : '天'
-      },
-      //Random default events
-      events    : [
-        {
-          title          : '维修设备',
-          start          : new Date(y, m, 1),
-          backgroundColor: '#00a65a', //red
-          borderColor    : '#00a65a' //red
-        },
-        {
-          title          : '日常维护',
-          start          : new Date(y, m, 8),
-          backgroundColor: '#00a65a', //red
-          borderColor    : '#00a65a' //red
-        },
-        {
-          title          : '设备故障',
-          start          : new Date(y, m, 19),
-          backgroundColor: '#f56954', //red
-          borderColor    : '#f56954' //red
-        },
-        {
-          title          : '日常维护',
-          start          : new Date(y, m, 16),
-          backgroundColor: '#0073b7', //red
-          borderColor    : '#0073b7' //red
-        },
-        {
-          title          : '登记设备使用情况',
-          start          : new Date(y, m, d - 5),
-          end            : new Date(y, m, d - 2),
-          backgroundColor: '#f39c12', //yellow
-          borderColor    : '#f39c12' //yellow
-        },
-        {
-          title          : '测试新设备',
-          start          : new Date(y, m, d + 1, 19, 0),
-          end            : new Date(y, m, d + 1, 22, 30),
-          allDay         : false,
-          backgroundColor: '#00a65a', //Success (green)
-          borderColor    : '#00a65a' //Success (green)
-        }
-      ],
-      editable  : false,
-      droppable : true, // this allows things to be dropped onto the calendar !!!
-      drop      : function (date, allDay) { // this function is called when something is dropped
-
-        // retrieve the dropped element's stored Event Object
-        var originalEventObject = $(this).data('eventObject')
-        console.log(originalEventObject)
-        // we need to copy it, so that multiple events don't have a reference to the same object
-        var copiedEventObject = $.extend({}, originalEventObject)
-        console.log(copiedEventObject)
-
-
-        // assign it the date that was reported
-        copiedEventObject.start = date
-        copiedEventObject.allDay          = false
-        copiedEventObject.backgroundColor = $(this).css('background-color')
-        copiedEventObject.borderColor     = $(this).css('border-color')
-
-        console.log(date._d)
-        Dialog({
-          title: "确认信息",
-          content: ""+date._d+"---"+copiedEventObject.title+"--"+copiedEventObject.start_time+"---"+copiedEventObject.end_time+"---"+copiedEventObject.detail+"---"+copiedEventObject.backgroundColor+"---"+copiedEventObject.equipment,
-          ok:{
-            callback: function () {
-              $.post("http://localhost:8084/post_task",
-                      {
-                        title:copiedEventObject.title,
-                        detail:copiedEventObject.detail,
-                        start_time: copiedEventObject.start_time,
-                        end_time: copiedEventObject.end_time,
-                        date:date._d,
-                        staff:copiedEventObject.staff,
-                        equipment: copiedEventObject.equipment,
-                        color:copiedEventObject.backgroundColor,
-                      },
-                      function(data,status) {
-                        console.log(status)
-                      },"json")
-            }
-          }
-        });
-        $('#calendar').fullCalendar('renderEvent', copiedEventObject, true)
-
-      }
-    })
 
     /* ADDING EVENTS */
-    let currColor = '#f39c12' //by default
-    //Color chooser button
-    let colorChooser = $('#color-chooser-btn')
+    var currColor = '#f39c12'//Color chooser button
+    var colorChooser = $('#color-chooser-btn')
+    //实现对颜色选择器的监听
     $('#color-chooser > li > a').click(function (e) {
-      e.preventDefault()
-      //Save color
-      currColor = $(this).css('color')
-      //Add color effect to button
+      e.preventDefault()//Save color
+      currColor = $(this).css('color')//Add color effect to button
       $('#add-new-event').css({
         'background-color': currColor,
         'border-color'    : currColor
       })
     })
+    //实现对添加任务的监听
     $('#add-new-event').click(function (e) {
-      e.preventDefault()
-      //Get value and make sure it is not null
-      let name = $('#new-event-title').val()
-      let detail=$('#new-event-detail').val()
-      let staff=$('#new-event-staff').val()
-      let start_time=$('#new-event-start-time').val()
-      let end_time=$('#new-event-end-time').val()
-      let equipment=$("#new-event-equipment").val()
+      e.preventDefault()//Get value and make sure it is not null
+      //删除信息输入框的已经输入的内容，方便对下一步的操作
+      var name = $('#new-event-title').val()
+      var detail=$('#new-event-detail').val()
+      var staff=$('#new-event-staff').val()
+      var start_time=$('#new-event-start-time').val()
+      var end_time=$('#new-event-end-time').val()
+      var equipment=$("#new-event-equipment").val()
       if (name.length == 0) {
+        alert("请输入任务名称")
         return
       }
+      if(start_time==null||end_time==null){
+        alert("尚未输入开始或者结束事件")
+        return;
+      }
+      if(!validTime(start_time,end_time)){
+        alert("起始时间不允许比结束时间迟")
+        return;
+      }
 
-
-
-      //Create events
+      //创建事件（在上方的任务表中）
       var event = $('<div />')
       event.css({
         'background-color': currColor,
@@ -381,7 +398,6 @@
         'color'           : '#fff'
       }).addClass('external-event')
       event.html(name)
-      //console.log(name+"--"+detail+'--'+staff+'--'+'--'+start_time+'--'+end_time)
 
       $('#external-events').prepend(event)
       ini_events(event,detail,staff,start_time,end_time,equipment)
@@ -393,8 +409,89 @@
       $('#new-event-start-time').val('')
       $('#new-event-end-time').val('')
       $('#new-event-equipment').val('')
-
     })
+
+
+
+
+    function month_transform(month){
+      switch (month) {
+        case "Jan":
+          return 0;
+          break;
+        case "Feb":
+          return 1;
+          break;
+        case "Mar":
+          return 2;
+          break;
+        case "Apr":
+          return 3;
+          break;
+        case "May":
+          return 4;
+          break;
+        case "Jun":
+          return 5;
+          break;
+        case "Jul":
+          return 6;
+          break;
+        case "Aug":
+          return 7;
+          break;
+        case "Sept":
+          return 8;
+          break;
+        case "Oct":
+          return 9;
+          break;
+        case "Nov":
+          return 10;
+          break;
+        case "Dec":
+          return 11;
+          break;
+        default:
+          return null;
+          break;
+      }
+    }
+
+    function feedback(title,detail,equipment,responsible,startTime){
+      return "您的任务名为："+title+";"+
+              "您的任务详细为：\n"+detail+";"+
+              "在"+equipment+"上;"+
+              "负责人为："+responsible+";"+
+              "起始时间为："+startTime+";"
+    }
+
+    function validTime(startTime,endTime) {
+      var arr1=startTime.split(":");
+      var startHour=arr1[0];
+      var startMinute=arr1[1];
+
+      var arr2=endTime.split(":");
+      var endHour=arr2[0];
+      var endMinute=arr2[1];
+
+      if(startHour<endHour){
+        return true
+      }else if(startHour==endHour){
+        if(startMinute<endMinute){
+          return true
+        }else{
+          return false
+        }
+      }else{
+        return false
+      }
+
+    }
+
+
+
+
   })
 </script>
 
