--- a/src/main/resources/templates/task/task_search.html
+++ b/src/main/resources/templates/task/task_search.html
@@ -150,14 +150,14 @@
               <table id="example1" class="table table-bordered table-striped">
                 <thead>
                 <tr>
-                  <th>事件序号</th>
-                  <th>日常任务名称</th>
-                  <th>任务所在设备名称</th>
+                  <th>序号</th>
+                  <th>任务名称</th>
+                  <th>所在设备</th>
                   <th>日期</th>
                   <th>责任人</th>
-                  <th>事件类型</th>
+                  <th>任务类型</th>
                   <th>任务发布人</th>
-                  <th>事件描述</th>
+                  <th>任务描述</th>
                   <th>操作</th>
                   <th>详情</th>
                 </tr>
